argocd/kustomize/base/rancher-httproute/rancher-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rancher-httproute
spec:
  hostnames:
  - "rancher.rajesh-kumar.in"
  parentRefs:
  - name: common-server-gateway 
    namespace: common-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: rancher-master-rancher-prime 
      port: 80
